svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nikfinal
  name: nikfinal
  namespace: nikdeploy-ns
spec:
  ports:
  - name: 8443-80
    port: 8443
    protocol: TCP
    targetPort: 80
  selector:
    app: nik-cisco-app
  type: ClusterIP
status:
  loadBalancer: {}
