route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nikapp-route-rule
  namespace: nikdeploy-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.nikapp.io
    http:
      paths:
      - path: /nik1
        pathType: Prefix
        backend:
          service:
            name: nikfinal
            port:
              number: 80
